--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,25 @@
+html {
+  font-size: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*, * ::before * ::after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+body {
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  line-height: 1.3;
+  margin: 0px;
+  margin-right: 0px;
+  padding: 0px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#370aff), to(#f3bfea));
+  background-image: linear-gradient(#370aff, #f3bfea);
+}
+
 .nav-bar {
   background-color: blueviolet;
 }
@@ -15,7 +37,7 @@
 
 img {
   width: 150px;
-  margin-left: 1rem;
+  margin-left: 0rem;
 }
 
 .web-logo {
@@ -28,5 +50,18 @@ img {
 
 .social-media {
   display: block;
+}
+
+.container li {
+  list-style: none;
+}
+
+.container a {
+  display: block;
+  border: 2px solid #ffffff;
+  padding: 10px;
+  margin-bottom: 15px;
+  text-decoration: none;
+  color: black;
 }
 /*# sourceMappingURL=main.css.map */
