--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -8,6 +8,9 @@ html{
 }
 
 body{
+    h3{
+        color: white;
+    }
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.3;
