--- a/css/_header.scss
+++ b/css/_header.scss
@@ -5,7 +5,10 @@ img{
 .web-logo{
     height: 175px;
   width: 175px;
-  background-color: #bbb;
+  background-color: white;
   border-radius: 50%;
   display: inline-block;
+}
+header{
+    color: white;
 }
