--- a/css/_buttons.scss
+++ b/css/_buttons.scss
@@ -1,14 +1,20 @@
 .container{
+    margin: 0px;
+    padding: 0px;
     li{
         list-style: none;
        
     }
     a{
-        display: block;
-        border: 2px solid #ffffff;
+        display:block;
+        border: 2px solid linear-gradient(rgb(55, 10, 255),rgb(243, 191, 234));
         padding: 10px;
         margin-bottom: 15px;
         text-decoration: none;
         color:black;
+       // text-align: center;
+        background-color: white;
+        margin-right: 70px;
+       margin-left: 30px ;
     }
 }
