--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ body {
   background-image: linear-gradient(#370aff, #f3bfea);
 }
 
+body h3 {
+  color: white;
+}
+
 .nav-bar {
   background-color: blueviolet;
 }
@@ -43,13 +47,22 @@ img {
 .web-logo {
   height: 175px;
   width: 175px;
-  background-color: #bbb;
+  background-color: white;
   border-radius: 50%;
   display: inline-block;
 }
 
+header {
+  color: white;
+}
+
 .social-media {
   display: block;
+}
+
+.container {
+  margin: 0px;
+  padding: 0px;
 }
 
 .container li {
@@ -58,10 +71,18 @@ img {
 
 .container a {
   display: block;
-  border: 2px solid #ffffff;
+  border: 2px solid linear-gradient(#370aff, #f3bfea);
   padding: 10px;
   margin-bottom: 15px;
   text-decoration: none;
   color: black;
+  background-color: white;
+  margin-right: 70px;
+  margin-left: 30px;
+}
+
+.social-media a {
+  -webkit-text-decoration-color: white;
+          text-decoration-color: white;
 }
 /*# sourceMappingURL=main.css.map */
