--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -10,6 +10,7 @@ html{
 body{
     h3{
         color: white;
+        margin-right: 1rem;
     }
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
