--- a/css/_buttons.scss
+++ b/css/_buttons.scss
@@ -5,6 +5,13 @@
         list-style: none;
        
     }
+    .youtube{
+        &:hover
+        {
+            background-color: whitesmoke;
+            color:red;
+        }
+       }
     a{
         display:block;
         border: 2px solid linear-gradient(rgb(55, 10, 255),rgb(243, 191, 234));
@@ -16,5 +23,8 @@
         background-color: white;
         margin-right: 70px;
        margin-left: 30px ;
+       border-radius: 30px;
+      
+       
     }
 }
